style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Poppins', sans-serif;
  background-image: url(./mobile-ingrediants/header-shapes\ mobile.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 0 45px;
  position: absolute;
}

html {
  font-size: 62.25%;
}

.container {
  padding: 2.8rem;
  margin: 0 auto;
}

.navigation {
  display: flex;
  justify-content: space-between;
  align-content: center;
}

.section-header {
  margin-bottom: 32rem;
}

.navigation-btn {
  background-color: transparent;
  border: none;
}

.primary-header {
  display: flex;
  font-size: 4rem;
  font-weight: 700;
  margin-top: 12rem;
  color: #172b4d;
  margin-bottom: 3.2rem;
}

.primary-decrption {
  font-size: 1.6rem;
  line-height: 2.4rem;
  text-align: justify;
  color: #344563;
  margin-bottom: 3.2rem;
}

.secondary-header {
  font-size: 1.6rem;
  color: #7f8cff;
  margin-bottom: 1.2rem;
}

.links {
  display: flex;
  gap: 1.6rem;
}

ul li {
  list-style: none;
}

.project {
  background: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  margin-bottom: 9.6rem;
  padding: 3.4rem;
  box-shadow: 0 0 5px 1 rgba(0, 0, 0, 0.1);
}

.project-card-header {
  font-size: 3.2rem;
  font-weight: 700;
  margin-top: 0.8rem;
}

.project-info {
  display: flex;
  gap: 1rem;
  align-items: center;
  font-size: 1.3rem;
}

.project-card-header-2 {
  color: #7a869a;
}

.dot-icon {
  width: 8px;
  height: 8px;
  background: #c1c7d0;
}

.card-decrption {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 2.4rem;
  color: #344563;
  text-align: start;
  margin-top: 1.9rem;
}

.programming-lang {
  display: flex;
  gap: 2.4rem;
  font-size: 1.2rem;
  font-weight: 500;
  line-height: 1.6rem;
  margin-top: 1.9rem;
  margin-bottom: 3.4rem;
  color: #6070ff;
}

.programming-lang h5 {
  background: #ebebff;
  border-radius: 8px;
  padding: 0.4rem 1.2rem;
}

.btn {
  display: inline-block;
  font-size: 1.7rem;
  font-weight: 500;
  background: #fff;
  border: 1px solid #396df2;
  border-radius: 16px;
  padding: 1.6rem;
  text-decoration: none;
  color: #396df2;
}

.project-btn {
  display: inline-block;
}

.section-about {
  margin-top: 16rem;
}

.about {
  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.1);
  border-radius: 0 40% 0 0;
}

.header-about {
  font-size: 4rem;
  font-weight: 700;
  line-height: 5.2rem;
  color: #172b4d;
  margin-bottom: 1.2rem;
}

.description-about {
  font-size: 1.6rem;
  font-weight: 400;
  line-height: 2.4rem;
  color: #344563;
  margin-bottom: 1.2rem;
  padding: 0 3rem 0 0.5rem;
  text-align: start;
}

.about h4 {
  margin-bottom: 2rem;
}

.about-links {
  margin-bottom: 3.4rem;
}

.languages {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 3.4rem;
  padding-right: 3.4rem;
  font-size: 2.4rem;
  font-weight: 500;
}

.arrow-icon {
  height: 2rem;
  width: 2rem;
}

.programming-skill {
  display: flex;
  flex-direction: column;
  gap: 1.8rem;
  padding: 3rem 1.8rem;
}

.programming-skill span {
  display: flex;
  align-items: center;
  background: #f7f7f9;
  border-radius: 8px;
  gap: 0.1rem;
  padding: 0.8rem 0 0.8rem 0.8rem;
}

.programming-skill span h5 {
  font-size: 1.5rem;
  font-weight: 500;
  margin-left: 2rem;
}

.frameworks-skills span {
  display: flex;
  justify-content: space-between;
  padding: 0 3.4rem 0 1.1rem;
  margin: 3rem 0;
}

.frameworks-skills span h5 {
  font-size: 2rem;
  font-weight: 500;
}

